add :: 최종 여행 계획 조회 추가